--- a/index.html
+++ b/index.html
@@ -12,28 +12,29 @@
                 <a href="#">
                     <img class="banner" src="assets/images/logo.svg" alt="skyhouse">
                 </a>
-                <ol>
-                    <li class="main" >
-                        მთავარი
-                    </li>
-                    <li>
-                        ჩვენს შესახებ
-                    </li>
-                    <li>
-                        პროექტები
-                    </li>
-                    <li>
-                        პარტნიორები
-                    </li>
-                    <li class="contact" >
-                        კონტაქტი
-                    </li>
-                </ol>
-                <div class="containertwo" >
+                <nav class="navbar">
+                    <ul class="navbar-ul">
+                        <li class="navbar-li"><a href="#">მთავარი</a></li>
+                        <li class="navbar-li"><a href="#">ჩვენ შესახებ</a></li>
+                        <li class="navbar-li"><a href="#">სერვისები</a></li>
+                        <li class="navbar-li"><a href="#">პროექტები</a></li>
+                        <li class="navbar-li"><a href="#">პარტნიორები</a></li>
+                        <li class="navbar-li"><button>კონტაქტი</a></button></li>
+                    </ul>
+                </nav>            
+            </div>
+                <div class="images" >
                     <img class="house" src="assets/images/house1.png" alt="house" />
                     <img class="housetwo" src="assets/images/house2.png" alt="anotherhouse" />
                 </div>
-            </div>
+                <div class="slide">
+                    <div class="bullets"></div>
+                    <div class="bullets"></div>
+                    <div class="bullets"></div>
+                    <div class="arrows">
+                        <img src="assets/images/left.png" alt="arrow left">
+                        <img src="assets/images/right.png" alt="arrow right">
+                    </div>
         </header>
         <footer>
 
