--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 
-<!-- 
+
 
     <section class="about">
         <div class="about-txt">
@@ -136,4 +136,4 @@
 
 
 </body>
-</html> -->
+</html>
